# obj2buf

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md
.github/workflows/: cmake-desktop.yml  emscripten.yml
dat/: README.md  bunny-polys-max+y.fbx  bunny-polys-max+z.fbx  bunny-quad-projection.fbx  bunny-tris-max+y.fbx  bunny-tris-max+z.fbx  bunny-tris-vcol.fbx  bunny.fbx  cube.fbx  teapot-modo.fbx
dat/hi-poly/: README.md  teapot-65k.fbx  trex-65k.fbx
inc/: bufferdescriptor.h  bufferlayout.h  fileutils.h  meshoptimizer.h  minifloat.h  objmesh.h  objvertex.h  packedvertex.h  tooloptions.h  vec.h  vertexpacker.h
src/: bufferdescriptor.cpp  bufferlayout.cpp  fileutils.cpp  main.cpp  mikktspace.c  minifloat.cpp  objmesh.cpp  objvertex.cpp  packedvertex.cpp  tooloptions.cpp  vertexpacker.cpp  zstd.c
